# optimal-set-representation-viewport-adaptive-streaming

./: CMakeLists.txt  FindCPLEX.cmake  README.md  RunOpti.py  RunOptiClient.py  RunOptiServer.py  preprocessingOptimalDB_database.sql  readBinStats.py
MainProject/: CMakeLists.txt
MainProject/inc/common/: Common.hpp  Serialize_shared_ptr.hpp  serialize_tuple.hpp
MainProject/inc/preprocessing/: AreaSet.hpp  PrecomputedAllowedVersion.hpp  Version.hpp
MainProject/src/preprocessing/: Optimal.cpp  PrecomputeSegmentsIntersections.cpp  Version.cpp
MainProjectV2/: CMakeLists.txt
MainProjectV2/inc/common/: ConfigArgs.hpp  Quaternion.hpp  RotMat.hpp
MainProjectV2/inc/preprocessing/: AreaSet.hpp  Optimal.hpp  PrecomputeSegmentsIntersections.hpp  PrecomputedAllowedVersion.hpp  Segment.hpp  Version.hpp
MainProjectV2/src/preprocessing/: Optimal.cpp  PrecomputeSegmentsIntersections.cpp  Version.cpp  main.cpp
PythonScript/: ComputationMananger.py  ComputationManangerDifferentB.py  ManagerConfig.ini
test/: Config.ini
